--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -232,8 +232,8 @@ quotes" at compile time if the string inside quotes is an identifier.
 likely to produce missing method errors at run time in any case.)
 Also, if there is whitespace around an intended C<.> concatenation,
 it cannot be parsed as a method call at all; instead if fails at
-compile time because standard Perl 6 has no C<< infix:<.> >> operator
-unless the user happens to have defined one (bad idea).]
+compile time because standard Perl 6 has a pseudo C<< infix:<.> >> operator
+that always fails at compile time.]
 
 For situations where you already have a method located, you
 can use a simple scalar variable in place of method name:
