Clarify that method hypers can be called in any order.
git-svn-id: http://svn.pugscode.org/pugs@23876 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 15 May 2007
+  Last Modified: 27 Jun 2007
   Number: 12
-  Version: 55
+  Version: 56
 
 =head1 Overview
 
@@ -832,6 +832,10 @@ pull out the values:
 
 As with other forms of method call, the "meth" above may be replaced
 with a quoted string or variable to do various forms of indirection.
+
+Note that, as with any hyper operator, the methods may be evaluated
+in any order.  Use an explicit loop if you want to do something with
+ordered side effects, such as I/O.
 
 =head1 Multisubs and Multimethods
 
